--- a/flex/03-flex-header-2/index.html
+++ b/flex/03-flex-header-2/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="header">
-      <div class="left">
+     <div class="left">
       <div class="logo">
         LOGO
       </div>
@@ -18,11 +18,13 @@
         <li><a href="google.com">link-two</a></li>
         <li><a href="google.com">link-three</a></li>
       </ul>
-      </div>
+     </div>
+     <div class="right">
       <button class="notifications">
         1 new notification
       </button>
       <div class="profile-image"></div>
+     </div>
     </div>
   </body>
 </html>
